--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,8 @@ main {
 
     width: 25vw;
     min-height: 30vh;
+
+    z-index: 2;
 }
 
 .game-screen {
@@ -72,9 +74,46 @@ main {
 
     width: 240px;
     min-height: 30vh;
+
+    z-index: 2;
 }
 
 #notifications-area {
+    position: fixed;
+
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
+    height: 100vh;
+    width: 100vw;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+}
+
+.notification {
+    margin: 16px;
+    padding: 16px;
+
+    background-color: #8bc495;
+    color: black;
+    border-radius: 8px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    font-weight: bold;
+
+    z-index: 5;
+}
+
+#popup-area {
     position: fixed;
 
     top: 0;
