--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,12 @@ main {
     z-index: 2;
 }
 
+.player-title {
+    height: 48px;
+    margin: 0;
+    padding: 0;
+}
+
 .active-player-icon {
     margin-left: 8px;
     font-size: 32px;
@@ -176,6 +182,10 @@ main {
         font-size: 1rem;
     }
 
+    input {
+        width: 160px;
+    }
+
     body {
         background: url(/assets/images/two-tone-bg-inversed.png) no-repeat center center fixed;
     }
@@ -190,20 +200,24 @@ main {
     }
 
     .player-screen {
-        padding: 16px;
-        width: calc(100% - 32px);
+        padding: 8px;
+        width: calc(100% - 16px);
     }
 
     .player-screen-game-started {
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
 
-        padding: 8px;
-
-        width: calc(100% - 16px);
         min-height: auto;
+    }
+
+    .player-scores-wrapper {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
     }
 
     .round-score-wrapper {
@@ -215,6 +229,12 @@ main {
         padding: 4px;
         border-radius: 8px;
         font-size: 1rem;
+    }
+
+    .game-screen {
+        padding: 4px;
+        width: calc(60% - 8px);
+        min-height: 20vh;
     }
 }
 
@@ -250,10 +270,15 @@ main {
         justify-content: space-between;
         align-items: center;
 
-        padding: 32px;
-
         width: 25vw;
         min-height: 30vh;
+    }
+
+    .player-scores-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
 
     .round-score-wrapper {
@@ -265,5 +290,11 @@ main {
         padding: 16px;
         border-radius: 16px;
         font-size: 1.2rem;
+    }
+
+    .game-screen {
+        padding: 32px;
+        width: 240px;
+        min-height: 30vh;
     }
 }
