write tests, implement new difficulty choice and game win condition change

--- a/css/utils.css
+++ b/css/utils.css
@@ -46,6 +46,14 @@
     margin: 16px;
 }
 
+.mr-8 {
+    margin-right: 8px;
+}
+
+.mt-8 {
+    margin-top: 8px;
+}
+
 .mt-32 {
     margin-top: 32px;
 }
@@ -68,6 +76,10 @@
 
 .text-xl {
     font-size: 1.2rem;
+}
+
+.w-full {
+    width: 100%;
 }
 
 .w-300 {
