--- a/css/main.css
+++ b/css/main.css
@@ -68,6 +68,14 @@ input {
     width: calc(100% - 16px);
 }
 
+select {
+    border: none;
+    outline: none;
+    border-radius: 4px;
+    padding: 8px;
+    width: calc(100% - 16px);
+}
+
 main {
     display: flex;
     justify-content: space-around;
